--- a/TH_01_2024.03.25_PM/BAI_01/index01.html
+++ b/TH_01_2024.03.25_PM/BAI_01/index01.html
@@ -47,8 +47,8 @@
                         </tr>
                         <tr>
                             <td>
-                                <img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AKGpihZusKlBOnqWLdOGB_4snfJp3wbeI4Z88PI4NPUd4o2emGarYTiATKoQ606CfiwE3PTgZVx7UPiQuIwjciwixuvCXot_xQ=w1278-h943" style="width: 250px; height: 200px;">
-                                <img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AKGpihby_PsJVrGknfC9Zq1n6lyV-YK_tJeMgUykXeXKp3qf0c6HKzwlRTi8JjVqHjrvQ0zugtOtw068r3CewU9wa1GFFQIkDg=w1278-h943" style="width: 250px; height: 400px;">
+                                <img src="img/anh-1.png" style="width: 250px; height: 200px;">
+                                <img src="img/anh-2.png" style="width: 250px; height: 400px;">
                             </td>
                         </tr>
                     </table>
@@ -59,7 +59,7 @@
                             <td>
                                 <div class="img-p">
                                     <div class="img-p1">
-                                        <img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AKGpihZMUL0os3oqQMp3bvCOIyjakBOayRlEHDOYFAmJeyL0ZVA2T6B3lgD3pf2MnYTkTEw7QOQ5FDBwHkSeyx-_DEZFsJ_gUQ=w1278-h943" style="width: 400px;">
+                                        <img src="img/anh-10.jpeg" style="width: 400px;">
                                         <h3>Học lập trình tại Zent có gì mới ?</h3>
                                         <p>Phương pháp học tập hoàn toàn mới, với đội ngũ giảng viên, trợ giảng nhiệt tình mang lại nhiều kiến thức bổ ích cho học viên. Bên canh đó, Zent còn hỗ trợ tối đa giới thiệu việc làm cho học viên sau khi tốt nghiệp</p>
                                     </div>
@@ -67,23 +67,23 @@
                                         <ul>
                                             <div style="display: flex; align-items: center; justify-content: space-between;">
                                                 <p>* Hãy trở thành đối tác của Zent</p>
-                                                <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihbfBwjs-4w7w2zBKwD_5leHgseQWqRiPAdqbrGCaHHV6lNNssNwY9B9o_Mx2uNy0JpuXjO0lg5JEfYWroXVnM8g_lGkRA=w724-h968" style="width: 100px; height: 80px;">
+                                                <img src="img/anh-3.png" style="width: 100px; height: 80px;">
                                             </div>
                                             <div style="display: flex; align-items: center; justify-content: space-between;">
                                                 <p>* Học viên Zent đã làm việc tại đâu</p>
-                                                <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihZYOASfh9pbInAVaqctdtArugA2AEpu5LZ7yz4CEZzctBwU4kklJRqJ2elWhr9EYoKCf_FQNBeDANmaHW5T_uhtQHN2Xw=w777-h968" style="width: 100px;">
+                                                <img src="img/anh-4.png" style="width: 100px;">
                                             </div>
                                             <div style="display: flex; align-items: center; justify-content: space-between;">
                                                 <p>* Tuyển dụng kỹ sư lập trình CNTT</p>
-                                                <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihYC68CScuWWFpD9VrJ55sbFG2XPZrgg3CpUB98MFj5NtV6RWJ4HVunuooP-KjrceFjfthUVO950KXdTA0FqjkgWjwppSw=w777-h968" style="width: 100px;">
+                                                <img src="img/anh-5.png" style="width: 100px;">
                                             </div>
                                             <div style="display: flex; align-items: center; justify-content: space-between;">
                                                 <p>* Khóa học lập trình C cơ bản miễn phí</p>
-                                                <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihaMU8X2HMFaD6SVbOmiAxleqp3mCPuPAmeK11X-AklOynGFSwyLXthEesqE0JogoOTqnpbHH9NQu8iWo1KywkVYmj9WlQ=w777-h968" style="width: 100px;">
+                                                <img src="img/anh-6.png" style="width: 100px;">
                                             </div>
                                             <div style="display: flex; align-items: center; justify-content: space-between;">
                                                 <p>* Hãy trở thành đối tác của Zent</p>
-                                                <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihZ5entcspaM192KcplNvs6_zAX8RHEoxy-PAYN4_QLLyrQK24dgze1HHIVUgTLpEDTI4vboteZFKCLEhaSJdfDF-z-x8Q=w775-h959" style="width: 100px;">
+                                                <img src="img/anh-7.png" style="width: 100px;">
                                             </div>
                                         </ul>
                                     </div>
@@ -92,7 +92,7 @@
                         </tr>
                     </table>
                     <div class="tbl2-1">
-                        <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihbBaN0WVmdlMwBJOMk2aWYyH0_o7h1PPEM1SKKK6445p_w116NXfWALhDySuBqxIrfiMxoUXMjQp4sX4YRYgmt7_ENzJA=w1027-h968" style="width: 740px;">
+                        <img src="img/anh-9.png" style="width: 740px;">
                     </div>
                     <table style="width: 740px; margin-left: 4px;">
                         <tr style="background-color: #efefef; margin-top: 2px;">
@@ -106,7 +106,7 @@
                                     <div class="img-pp1">
                                         <ul>
                                             <div style="display: flex; width: 400px;">
-                                                <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihZYOASfh9pbInAVaqctdtArugA2AEpu5LZ7yz4CEZzctBwU4kklJRqJ2elWhr9EYoKCf_FQNBeDANmaHW5T_uhtQHN2Xw=w968-h968">
+                                                <img src="img/anh-4.png">
                                                 <h3>Zent kí kết hợp tác với các công ty công nghệ</h3>
                                             </div>
                                             <div style="width: 400px;">
@@ -118,15 +118,15 @@
                                         <ul>
                                             <div style="display: flex; align-items: center; justify-content: space-between;">
                                                 <p>* Hãy trở thành đối tác của Zent</p>
-                                                <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihbfBwjs-4w7w2zBKwD_5leHgseQWqRiPAdqbrGCaHHV6lNNssNwY9B9o_Mx2uNy0JpuXjO0lg5JEfYWroXVnM8g_lGkRA=w724-h968" style="width: 100px; height: 80px;">
+                                                <img src="img/anh-3.png" style="width: 100px; height: 80px;">
                                             </div>
                                             <div style="display: flex; align-items: center; justify-content: space-between;">
                                                 <p>* Học viên Zent đã làm việc tại đâu</p>
-                                                <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihZYOASfh9pbInAVaqctdtArugA2AEpu5LZ7yz4CEZzctBwU4kklJRqJ2elWhr9EYoKCf_FQNBeDANmaHW5T_uhtQHN2Xw=w777-h968" style="width: 100px;">
+                                                <img src="img/anh-4.png" style="width: 100px;">
                                             </div>
                                             <div style="display: flex; align-items: center; justify-content: space-between;">
                                                 <p>* Khóa học lập trình C cơ bản miễn phí</p>
-                                                <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihaMU8X2HMFaD6SVbOmiAxleqp3mCPuPAmeK11X-AklOynGFSwyLXthEesqE0JogoOTqnpbHH9NQu8iWo1KywkVYmj9WlQ=w777-h968" style="width: 100px;">
+                                                <img src="img/anh-6.png" style="width: 100px;">
                                             </div>
                                         </ul>
                                     </div>
@@ -146,8 +146,8 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihbgpEBorIMA8UHSCeWCqxtOsajwKxgsSNUmH6IoMu7lOqYJru7rtsrPD8tiLxGMQn3Q_8FOTnzD_UMKwA_6GHY9PEeh=w958-h959" style="width: 245px;">
-                                    <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihbiZ4GWwgyvX6WIECXAIcYVHHdDfImfbAShA2snw5v1cKYduHjKc3IOQr52Bt8ygJ8J9agtB7uLSscQ5XZUE39_2BuCgw=w722-h959" style="width: 250px;">
+                                    <img src="img/anh-8.png" style="width: 245px;">
+                                    <img src="img/anh-2.png" style="width: 250px;">
                                 </td>
                             </tr>
                         </table>
