--- a/TH_01_2024.03.25_PM/BAI_02/index02.html
+++ b/TH_01_2024.03.25_PM/BAI_02/index02.html
@@ -35,7 +35,7 @@
             </ul>
         </div>
         <div class="nav3-img">
-            <img src="https://scontent.fhan18-1.fna.fbcdn.net/v/t1.15752-9/432720226_7506623072693789_2664873784715086553_n.png?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeFu0Xd7Qb3pFcuyGkIbixI5FT1lMU1kH2QVPWUxTWQfZKYoyacKK6ogWOaiS36MRowkKk4OUUqBofq-ZrQRGV6h&_nc_ohc=gFsFjzm31fwAX9kW4lL&_nc_ht=scontent.fhan18-1.fna&oh=03_AdQdWQ8QoYBo276AsP-fp5MCFhdpMSLn3UK0xfr0jHw19w&oe=662B2C67">
+            <img src="img/anh-1.png">
         </div>
         <!-- Body New -->
         <div class="nav3">                
@@ -43,7 +43,7 @@
                 <div class="article-wrap">
                     <div class="article">
                         <div class="article-thumb">
-                            <a href=""><img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AKGpihYN0jjJu0cmhUd0S8jOxU9pmsuf7PS-DCUBDKWWZ5DJ1loYxNR5aSs9YmcX7PrtY7RK5HL6h7qz5EiG0oTEN6m3aKXZZA=w958-h1030"></a>
+                            <a href=""><img src="img/anh-2.png"></a>
                             <h2>Indonesia đang trong "kịch bản tồi tệ nhất", nguy cơ thành Ấn Độ thứ hai</h2>
                             <p>(Dân trí)-Indonesia thừa nhận đang ở trong "kịch bản tồi tệ nhất" khi số ca nhiễm và tử vong vì Covide-19 tăng vọt do biến thể Delta.</p>
                             <ul>
@@ -100,25 +100,25 @@
                    </div>    
                 <div class="nav3-imgthumb">
                     <div class="nav3-imgthumb1">
-                        <img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AKGpiharTLCBN3iwX_Q0srOjfY4zlB-Ni9yOK3IXXZk2QAzyDRCD8ztSg3qu6wWmxrdKVmqaDA1TSpz7mKMALD0vjjLgAe6YeA=w958-h1030">
+                        <img src="img/anh-3.png">
                         <h4>Vì sao khu công nghiệp Thăng Long liên tiếp có các công nhân mắc Covid-19?</h4>
                     </div>
                     <div class="nav3-imgthumb1">
-                        <img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AKGpihZPU8AV7PJjVMiUVfX6S2Ie8gG7FnWY4rrDkxdMMdflzAv2EDkO0C1Srj6E3QT3ULeTvRYGO263_sctu31skjyPKxVwYA=w958-h1030">
+                        <img src="img/anh-4.png">
                         <h4>TPHCM phát triển hỗ trợ Covid-19 tận nhà, dân nhận qua khe cửa vì sợ dịch</h4>
                     </div>
                     <div class="nav3-imgthumb1">
-                        <img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AKGpihZFcN-377dAeaEeTKTN_sKsjWupcQ_LuI8Z8iTnpKaDEFM10APwpBGeEWPtD-92cFM6iqIDXnhUIktwrlBu69oaOXaz=w958-h1030">
+                        <img src="img/anh-5.png">
                         <h4>Bệnh viện tư nhân ở An Giang cung cấp dịch vụ tiêm vắc xin phòng Covid-19?</h4>
                     </div>
                 </div>
                     </div>                    
                 </div>
                 <div class="navimg">
-                    <div class="nav3-img"><img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AKGpihZPXiznUAaaqAiLNGfEIX26P_kyPvVh4DzGQ0fBjeljGVMtJraX_ZnZ02WVULI57t_5MXoZeWRzQjXVxGgaUDh5rFyWcA=w958-h1030"></div>
-                    <div class="nav3-img"><img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AKGpihYxCjdUguI-2zD9m-k--OA_ONkR3rh9omYx_G8dAEzN_F4VnbYGw4IJvXyArYQztdf6-uVxeIk5OWoB6LL_6uh_-5hN8w=w958-h1030"></div>
-                    <div class="nav3-img"><img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AKGpihYuMpS_tBWQPFt0s6YMGScnXPbbQtHMg348B3pEDbRFTlouyH6Q8fy7yWvsv4qb2cBZ7cIevuLxw1ahImgQ8MSPenNfTA=w958-h1030"></div>
-                    <div class="nav3-img"><img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AKGpihbYaQcNbSPuShgDiEXDgiEyM5AqJEOJAW-TSjv9dUIrzJzCHR1cxIZF8b4sUXLroBAvbRvNylkAWukHqeSwgtYh6RCRig=w958-h1030"></div>
+                    <div class="nav3-img"><img src="img/anh-9.png"></div>
+                    <div class="nav3-img"><img src="img/anh-8.png"></div>
+                    <div class="nav3-img"><img src="img/anh-7.png"></div>
+                    <div class="nav3-img"><img src="img/anh-6.png"></div>
                     <div class="nav3-endnew">
                         <div class="nav3-title"><h2>Phần mềm CAD dễ sử dụng</h2></div>
                         <div class="nav3-end">
